# actix-web-tutorial

./: .gitignore  README.md
application/: Cargo.toml
application/src/: main.rs
databases/: Cargo.toml
databases/src/: actions.rs  main.rs
errors/: Cargo.toml
errors/src/: main.rs
extractors/: Cargo.toml
extractors/src/: main.rs
hello-world/: Cargo.toml
hello-world/src/: main.rs
middleware/: Cargo.toml
middleware/src/: main.rs
protocols/: Cargo.toml
protocols/src/: main.rs
request-handlers/: Cargo.toml
request-handlers/src/: main.rs
requests/: Cargo.toml
requests/src/: main.rs
responses/: Cargo.toml
responses/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
static_files/: Cargo.toml
static_files/src/: main.rs
static_files/static/: hoge.html
testing/: Cargo.toml
testing/src/: main.rs
todo/: Cargo.toml  README.md
todo/src/: api.rs  db.rs  main.rs  model.rs  schema.rs  session.rs
todo/static/css/: skeleton.css  style.css
url_dispatch/: Cargo.toml
url_dispatch/src/: main.rs
