[package]
authors = ["tatamiya <tamyuji1002@gmail.com>"]
edition = "2018"
name = "databases"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = {version = "^1.1.0", features = ["sqlite", "r2d2"]}
serde = "1"
serde_json = "1.0"
uuid = {version = "0.8", features = ["serde", "v4"]}
