[package]
authors = ["tatamiya <tamyuji1002@gmail.com>"]
edition = "2018"
name = "requests"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0"
actix-web = "3"
futures = "0"
sanitize-filename = "0.2"
serde = "1"
serde_json = "1"
