[package]
authors = ["tatamiya <tamyuji1002@gmail.com>"]
edition = "2018"
name = "todo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.3"
actix-session = "0.4"
actix-web = "3"

dotenv = "0.15"
env_logger = "0.8"
futures = "0.3.1"
log = "0.4.3"
serde = {version = "1.0.69", features = ["derive"]}
serde_json = "1.0.22"
tera = "1.5.0"

[dependencies.diesel]
features = ["sqlite", "r2d2"]
version = "1.3.2"
